Fix | Gap between price elements per client req

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -370,8 +370,8 @@ $bp-sm: 575px;
   &__data {
     p {
       display: grid;
-      grid-template-columns: 1fr .2fr;
-      gap: 1rem;
+      grid-template-columns: 1fr .3fr;
+      gap: .6rem;
     }
 
     span {
